--- a/001-Skill-primeros-pasos/index.html
+++ b/001-Skill-primeros-pasos/index.html
@@ -5,32 +5,8 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Page Title</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='SS/main.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='CSS/main.css'>
     <script src='JS/main.js'></script>
-    <Script>
-        function saludar(){
-
-            let txtemail = document.getElementById("txtemail").value;
-            let txtpassword = document.getElementById("txtpassword").value;
-
-            if (txtlogin=== ""){
-                alert("Has dejado la casilla en blanco");
-                if (txtpassword=== ""){
-                
-                }else{
-                    alert("Email vacio, password relleno");
-                }
-            }else{
-                if (txtpassword=== ""){
-                    alert("Email relleno, Password vacio");
-                }else{
-                    alert("Login Corecto, Email y password relleno");
-                }
-            }
-
-            
-        }
-    </Script>
 </head>
 <body>
     <h1></h1>
@@ -40,7 +16,9 @@
         <input type="text" id="txtemail"/>
         <p>Password</p>
         <input type="text" id="txtpassword"/>
-        <input type="button" value="login" onclick="saludar();"/>
+        <input type="button" value="Enviar" onclick="saludar();" id="enviar"/>
     </div>
+    <p><h1>uwu
+    </h1></p>
 </body>
 </html>
