--- a/002 Crunchyroll/index.html
+++ b/002 Crunchyroll/index.html
@@ -10,19 +10,15 @@
 </head>
 <body>
     <input type="button" onclick="cargarPeliculas()" value="Peliculas">
-    <div inert="peliculas">
-        <table id="peliculas">
+    <input type="button" onclick="cargarDrama()" value="Drama">
+    <input type="button" onclick="cargarRomance()" value="Romance">
+    <div id="peliculas">
+        <table>
             <tr>
-                <th>Nombre</th>
-                <th>Genero</th>
+                <th>Titulo</th>
                 <th>Director</th>
-                <th>Fecha de Estreno</th>
-            </tr>
-            <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
+                <th>Genero</th>
+                <th>Calificacion</th>
             </tr>
         </table>
     </div>
