--- a/002 Crunchyroll/index.html
+++ b/002 Crunchyroll/index.html
@@ -9,9 +9,12 @@
     <script src='main.js'></script>
 </head>
 <body>
-    <input type="button" onclick="cargarPeliculas()" value="Peliculas">
-    <input type="button" onclick="cargarDrama()" value="Drama">
-    <input type="button" onclick="cargarRomance()" value="Romance">
+    <div class="container">
+        <input type="button" onclick="cargarPeliculas()" value="Peliculas">
+        <input type="button" onclick="cargarDrama()" value="Drama">
+        <input type="button" onclick="cargarRomance()" value="Romance">
+        
+    </div>
     <div id="peliculas">
         <table>
             <tr>
@@ -22,5 +25,6 @@
             </tr>
         </table>
     </div>
+    
 </body>
 </html>
